--- a/proyecto-js/clock.html
+++ b/proyecto-js/clock.html
@@ -13,13 +13,10 @@
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <!-- Slider -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-
     <!-- MomentJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/es.js"></script>
+
 </head>
 
 <body>
@@ -43,18 +40,11 @@
                 </ul>
             </nav>
         </header>
-        <!-- Slider -->
-        <div id="slider">
-            <div class="bxslider">
-                <div><img src="./img/hojas.jpg" title="Hojas"></div>
-                <div><img src="./img/rojo.jpg" title="Rojo"></div>
-                <div><img src="./img/cielo.jpg" title="Cielo"></div>
-            </div>
-        </div>
         <!-- Contenido -->
         <section id="content">
-            <div id="posts">
-                <!-- Cargar posts desde json -->
+            <div id="box">
+                <!-- Cargar reloj -->
+                <div id="clock"></div>
             </div>
             <aside id="sidebar">
                 <div id="about">
