--- a/proyecto-js/contact.html
+++ b/proyecto-js/contact.html
@@ -12,14 +12,15 @@
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="./js/jquery-ui-1.12.1/jquery-ui.min.css">
+    <link rel="stylesheet" href="./js/jquery-ui-1.12.1/jquery-ui.structure.min.css">
+    <link rel="stylesheet" href="./js/jquery-ui-1.12.1/jquery-ui.theme.min.css">
+    <script type="text/javascript" src="./js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
 
-    <!-- Slider -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <!-- Plugin validation -->
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
 
-    <!-- MomentJS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/es.js"></script>
 </head>
 
 <body>
@@ -43,18 +44,36 @@
                 </ul>
             </nav>
         </header>
-        <!-- Slider -->
-        <div id="slider">
-            <div class="bxslider">
-                <div><img src="./img/hojas.jpg" title="Hojas"></div>
-                <div><img src="./img/rojo.jpg" title="Rojo"></div>
-                <div><img src="./img/cielo.jpg" title="Cielo"></div>
-            </div>
-        </div>
         <!-- Contenido -->
         <section id="content">
-            <div id="posts">
-                <!-- Cargar posts desde json -->
+            <div id="box">
+                <!-- Cargar formulario -->
+                <h2>Contacto</h2>
+                <form id="form-contact" action="" method="POST">
+                    <label for="name">Nombre</label>
+                    <input type="text" name="name" data-validation="alphanumeric">
+
+                    <label for="surname">Apellidos</label>
+                    <input type="text" name="surname" data-validation="alphanumeric">
+
+                    <label for="email">Email</label>
+                    <input type="email" name="email" data-validation="email">
+
+                    <label for="gender">Sexo</label>
+                    <select name="gender" data-validation="required">
+                        <option value="man">Hombre</option>
+                        <option value="woman">Mujer</option>
+                    </select>
+
+                    <label for="date">Fecha de nacimiento</label>
+                    <input type="text" name="date" data-validation="date" data-validation-format="dd-mm-yy">
+
+                    <label for="age">Edad</label>
+                    <input type="number" name="age" data-validation="number">
+
+                    <input type="submit" value="Enviar">
+                </form>
+
             </div>
             <aside id="sidebar">
                 <div id="about">
